# interactive-hex-meshing

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
geomlib/geomlib/: CMakeLists.txt  TetMesh.cpp  TetMesh.h  TriMesh.cpp  TriMesh.h  TriangularMeshSampler.cpp  TriangularMeshSampler.h  common.cpp  common.cuh  common.h  generalized_projection.h  generalized_projection_cuda.cu  generalized_projection_info.cpp  generalized_projection_info.h  hausdorff_distance.cpp  hausdorff_distance.h  point_tet_mesh_test.h  point_tet_mesh_test_cuda.cu  ray_triangle_intersection.cpp  ray_triangle_intersection.h  utils.cuh  vec_utils.cuh
geomlib/geomlib/autograd/: GeneralizedProjection.cpp  GeneralizedProjection.h
geomlib/geomlib/io/: ObjParser.cpp  ObjParser.h  TetMeshParser.cpp  TetMeshParser.h
hex/: CMakeLists.txt
hex/src/: HexMeshingApp.cpp  HexMeshingApp.h  Settings.cpp  Settings.h  common.cpp  common.h  debug.cpp  debug.h  logging.h  main.cpp
hex/src/controllers/: CuboidEditingController.cpp  CuboidEditingController.h  GlobalController.cpp  GlobalController.h  ShortcutController.cpp  ShortcutController.h
hex/src/controllers/stages/: DecompositionStage.cpp  DecompositionStage.h  DeformationStage.cpp  DeformationStage.h  DiscretizationStage.cpp  DiscretizationStage.h  HexahedralizationStage.cpp  HexahedralizationStage.h  PipelineStage.cpp  PipelineStage.h
hex/src/models/: Cuboid.cpp  Cuboid.h  GlobalState.cpp  GlobalState.h  HexComplex.cpp  HexComplex.h  HexConvention.cpp  HexConvention.h  HexMeshQuality.cpp  HexMeshQuality.h  HexahedralMesh.cpp  HexahedralMesh.h  MultiDimArray.h  Polycube.cpp  Polycube.h  PolycubeGraph.cpp  PolycubeGraph.h  PolycubeInfo.cpp  PolycubeInfo.h  QuadComplex.cpp  QuadComplex.h  QuadrilateralMesh.cpp  QuadrilateralMesh.h  Ray.cpp  Ray.h  TetrahedralMesh.cpp  TetrahedralMesh.h  TriangularMesh.cpp  TriangularMesh.h
hex/src/optim/: CubicVolumetricDeformer.cpp  CubicVolumetricDeformer.h  DirectModel.cpp  DirectModel.h  DistortionEnergy.cpp  DistortionEnergy.h  HexComplexDeformer.cpp  HexComplexDeformer.h  LargestCuboidSolver.cpp  LargestCuboidSolver.h  PolycubeOptimizer.cpp  PolycubeOptimizer.h  torch_utils.cpp  torch_utils.h
hex/src/serialization/: Serializer.cpp  Serializer.h
hex/src/utility/: ImGuiEx.cpp  ImGuiEx.h  PathManager.cpp  PathManager.h  StopWatch.cpp  StopWatch.h  imfilebrowser.h
hex/src/views/: CuboidNode.cpp  CuboidNode.h  FilteredHexMesh.cpp  FilteredHexMesh.h  GlobalView.cpp  GlobalView.h  HexCollectionView.cpp  HexCollectionView.h  LandmarksEditingView.cpp  LandmarksEditingView.h  PolycubeView.cpp  PolycubeView.h  QuadSurfaceView.cpp  QuadSurfaceView.h  TriSurfaceView.cpp  TriSurfaceView.h
vkoo/: CMakeLists.txt
vkoo/include/vkoo/: ObjParser.h  common.h  utils.h
vkoo/include/vkoo/core/: Application.h  Gui.h  (+42 more)
vkoo/shaders/: deferred_geometry.frag  deferred_geometry.vert  deferred_lighting.frag  deferred_ssao.frag  deferred_ssao_blur.frag  deferred_transparent.frag  forward.frag  forward.vert  imgui.vert  offscreen.vert  postprocessing.frag  recompile.sh
vkoo/src/: ObjParser.cpp  common.cpp  utils.cpp
vkoo/src/core/: Application.cpp  Buffer.cpp  BufferPool.cpp  CommandBuffer.cpp  CommandPool.cpp  DeferredLightingSubpass.cpp  DescriptorPool.cpp  DescriptorSet.cpp  DescriptorSetLayout.cpp  Device.cpp  FencePool.cpp  ForwardSubpass.cpp  Framebuffer.cpp  GLSLCompiler.cpp  GeometrySubpass.cpp  GraphicsPipeline.cpp  Gui.cpp  Image.cpp  ImageView.cpp  InputEvent.cpp  Instance.cpp  PhysicalDevice.cpp  PipelineLayout.cpp  PipelineState.cpp  PostprocessingSubpass.cpp  PrimitiveFactory.cpp  Queue.cpp  RenderContext.cpp  RenderFrame.cpp  RenderPass.cpp  RenderPipeline.cpp  RenderTarget.cpp  ResourceBindingState.cpp  ResourceCache.cpp  SPIRVReflection.cpp  SSAOBlurSubpass.cpp  SSAOSubpass.cpp  Sampler.cpp  SemaphorePool.cpp  ShaderModule.cpp  (+3 more)
vkoo/src/st/: Image.cpp  Material.cpp  Node.cpp  Scene.cpp  ShaderProgram.cpp  Texture.cpp  Transform.cpp
(+42 files in other folders)
